Optimize HTML by adding preconnect and cleaning links
Added preconnect links for fonts and removed duplicate remixicon stylesheet.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>gird layout</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.8.0/fonts/remixicon.css" rel="stylesheet" />
+     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.8.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -183,5 +187,6 @@
 
     </main>
 </body>
+
 
 </html>
